2008-09-17  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.GtkCore.mdp: Updated projects.

2008-09-15  Mike Kestner <mkestner@novell.com> 

	* MonoDevelop.GtkCode.GuiBuilder/GtkProjectServiceExtension.cs:
	add the project stetic file to any generation warnings produced.
	Fixes #373244.

2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* lib/libsteticui.mdp, lib/libstetic.mdp, lib/gtk-gui/generated.cs,
	  gtk-gui/generated.cs: Updated generated code.

2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.GtkCore.GuiBuilder/ActionGroupDisplayBinding.cs,
	  MonoDevelop.GtkCore.GuiBuilder/CodeBinder.cs,
	  MonoDevelop.GtkCore.GuiBuilder/GuiBuilderProject.cs,
	  MonoDevelop.GtkCore.GuiBuilder/GuiBuilderService.cs,
	  MonoDevelop.GtkCore.GuiBuilder/GuiBuilderWindow.cs,
	  MonoDevelop.GtkCore/WidgetFileDescriptionTemplate.cs,
	  MonoDevelop.GtkCore/WidgetParser.cs: Track api changes.

2008-09-11  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.GtkCore.GuiBuilder/CodeBinder.cs: Changes caused by
	  interface changes.

2008-09-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.GtkCore.NodeBuilders/ProjectFolderNodeBuilderExtension.cs,
	  MonoDevelop.GtkCore.NodeBuilders/StockIconsNodeBuilder.cs,
	  MonoDevelop.GtkCore.NodeBuilders/WidgetNodeBuilder.cs,
	  MonoDevelop.GtkCore.NodeBuilders/ProjectNodeBuilder.cs,
	  MonoDevelop.GtkCore.NodeBuilders/WindowsFolderNodeBuilder.cs,
	  MonoDevelop.GtkCore.NodeBuilders/ActionGroupNodeBuilder.cs: Moved
	  the extensible tree view to its own directory.

2008-08-27  Mike Kestner <mkestner@novell.com> 

	* MonoDevelop.GtkCore/WidgetFileDesciptionTemplate.cs: perform a 
	project save after the file insertions and updates.  This seems
	suboptimal, since it would probably be better to mark the project
	dirty and let the user save the project, but until we switch to
	one-widget-per-design-file, we probably need to save the project
	automatically to avoid problems.
	Fixes #385712.
